--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@ body_class: home-intro
     <h2 class="intro-subtitle">Coder, Developer, Film Maker</h2>
 
   </div>
-
+  
+  {% include analytics.html %}
 </section>
